--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,7 +4,16 @@
      <meta charset="utf-8">
      <title>LY</title>
   </head>
-   <body>
+  <body>
+     <header>
+        <h1> LY </h1>
+        <nav>
+           <ul>
+              <li><a href="index.html">Home</a></li>
+              <li><a href="javascript.html">JS</a></li>
+           </ul>
+        </nav>
+     </header>
     
       {{content}}
       
