--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,8 +9,8 @@
         <h1> LY </h1>
         <nav>
            <ul>
-              <li><a href="index.html">Home</a></li>
-              <li><a href="javascript.html">JS</a></li>
+              <li><a href="{{site.baseurl}}/index.html">Home</a></li>
+              <li><a href="{{site.baseurl}}/javascript.html">JS</a></li>
            </ul>
         </nav>
      </header>
