--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,12 +7,7 @@
   <body>
      <header>
         <h1> LY </h1>
-        <nav>
-           <ul>
-              <li><a href="{{site.baseurl}}/index.html">Home</a></li>
-              <li><a href="{{site.baseurl}}/javascript.html">JS</a></li>
-           </ul>
-        </nav>
+        {% include nav.html %}
      </header>
     
       {{content}}
