--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,6 +1,6 @@
 <nav>
       <ul>
-          <li><a id="{% if page.url == 'index.html' %}active{% endif %}" href="{{site.baseurl}}/index.html">Home</a></li>
-          <li><a id="{% if page.url == 'javascript.html' %}active{% endif %}" href="{{site.baseurl}}/javascript.html">JS</a></li>
+          <li><a id="{% if page.url == '/index.html' %}active{% endif %}" href="{{site.baseurl}}/index.html">Home</a></li>
+          <li><a id="{% if page.url == '/javascript.html' %}active{% endif %}" href="{{site.baseurl}}/javascript.html">JS</a></li>
       </ul>
 </nav>
