--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,5 +1,5 @@
 <nav>
-      <ul>
+      <ul class="nav">
           <li><a href="{{site.baseurl}}/index.html" class="{% if page.url == '/index.html' %}current{% endif %}">Home</a></li>
           <li><a href="{{site.baseurl}}/javascript.html" class="{% if page.url == '/javascript.html' %}current{% endif %}">JS</a></li>
       </ul>
