--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,13 +8,13 @@
   <body>
      <header>
         <h1> LY </h1>
-        {% include nav.html %}
+        {% include nav.html  nvclass='nav-top' %}
      </header>
     
       {{content}}
       
      <footer>
-        {% include nav.html %}
+        {% include nav.html nvclass='nav-bottom' %}
         <p> © 2021 LY </p>
      </footer>
      
