--- a/_layouts/js.html
+++ b/_layouts/js.html
@@ -2,4 +2,11 @@
 layout: default
 ---
 
+<nav>
+  <ul>
+    <li><a href="{{site.baseurl}}/js.html">JS</a></li>
+    <li><a href="{{site.baseurl}}/js.html">JS</a></li>
+  </ul>
+</nav>
+
 {{content}}
